homeassistant/ingress.yaml
## homeassistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: "homeassistant" # Same namespace as the deployment
  name: "homeassistant-ing" # Name of the ingress (see kubectl get ingress -A)
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Encrypt using the ClusterIssuer deployed while setting up Cert-Manager
    nginx.ingress.kubernetes.io/proxy-body-size:  "50m" # Increase the size of the maximum allowed size of the client request body
spec:
  tls:
  - hosts:
    - "homeassistant.chrislanus.com" # Host to access nextcloud
    secretName: "homeassistant-prod-tls" # Name of the certifciate (see kubectl get certificate -A)
  rules:
  - host: "homeassistant.chrislanus.com" # Host to access nextcloud
    http:
      paths:
        - path: /  # We will access NextCloud via the URL https://nextcloud.<domain.com>/
          backend:
            serviceName: "homeassistant-home-assistant" # Mapping to the service (see kubectl get services -n nextcloud)
            servicePort: 8123 # Mapping to the port (see kubectl get services -n nextcloud)
